#new feature : add 'show system' : cpu usage, memory, run thread monitoring feature.